# FireWatch

./: CMakeLists.txt  README.md
cmake/Modules/: FindDlib.cmake  FindOpenPose.cmake
examples/: CMakeLists.txt  iwatch_demo.cpp  iwatch_demo_phase_2_to_3.cpp  iwatch_func_demo.cpp  iwatch_impl_demo.cpp  iwatch_impl_demo_phase_2_to_3.cpp  iwatch_memleak_demo.cpp  iwatch_multitask_demo.cpp  test_alg.cpp
include/iwatch/: iwatch_engine.h  iwatch_hyper_parameter.h  iwatch_macros.h  iwatch_session.h
include/iwatch/entity/: iwatch_abnormality.h  iwatch_common.h  iwatch_condition.h  iwatch_skeleton.h  iwatch_target.h
include/iwatch/impl/: AutonomousServiceTerminalAbnormalDetection.h  GarbageDetection.h  Incident_Recognition.h  Judgement.h  Pose_Estimation.h  ServicePeopleAppearanceDetection.h  StationaryObjectDetection.h  Tracker.h  VideoEquipmentAbnormalDetection.h  common.h  eventloop.h  iWatch.h  iwatch_api_session.h  iwatch_manager.h
models/incident/: ref_label.txt  resnet.prototxt
src/: CMakeLists.txt  iwatch_engine.cpp  iwatch_hyper_parameter.cpp  iwatch_session.cpp
src/entity/: iwatch_abnormality.cpp  iwatch_common.cpp  iwatch_condition.cpp  iwatch_skeleton.cpp
src/impl/: AutonomousServiceTerminalAbnormalDetection.cpp  GarbageDetection.cpp  Incident_Recognition.cpp  Judgement.cpp  Pose_Estimation.cpp  ServicePeopleAppearanceDetection.cpp  StationaryObjectDetection.cpp  Tracker.cpp  VideoEquipmentAbnormalDetection.cpp  eventloop.cpp  iWatch.cpp  iwatch_api_session.cpp  iwatch_manager.cpp
